--- a/Programs/Skeleton/Skeleton/Skeleton.vcxproj.filters
+++ b/Programs/Skeleton/Skeleton/Skeleton.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Skeleton.cpp">
+    <ClCompile Include="framework.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="framework.cpp">
+    <ClCompile Include="Garden.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
